--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
+    <h2>Самостійна робота №1</h1>
+    <h2>1.3 HTML Основні приклади</h2>
+    <h2><!DOCTYPE html></h2>
     
 </body>
 </html>
